resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_comments-1.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
struct resym_test::ArrayTest {
  char array1[64];
  int32_t array2[64];
  resym_test::PrimitiveTypesTest array3[64];
  char array4[1][2][3][4][5];
  int32_t array5[1][2][3][4][5];
  resym_test::PrimitiveTypesTest array6[1][2][3][4][5];
};
