resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_comments-14.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
class resym_test::SpecializedInterfaceImplClass : public resym_test::PureVirtualClassSpecialized {
  /* 0x0000: fields for resym_test::PureVirtualClassSpecialized */
  
  private: virtual int32_t InterfaceVirtual();
  public: SpecializedInterfaceImplClass(resym_test::SpecializedInterfaceImplClass&);
  public: SpecializedInterfaceImplClass(const resym_test::SpecializedInterfaceImplClass&);
  public: SpecializedInterfaceImplClass();
  public: resym_test::SpecializedInterfaceImplClass& operator=(resym_test::SpecializedInterfaceImplClass&);
  public: resym_test::SpecializedInterfaceImplClass& operator=(const resym_test::SpecializedInterfaceImplClass&);
};
