resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_comments-16.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
struct resym_test::BigOffsetsStruct {
  char a[65536];
  char b[65536];
};
