resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_comments-2.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
struct resym_test::BitFieldsTest1 {
  uint32_t b1 : 1;
  uint32_t b2 : 1;
  uint32_t b3 : 30;
};
